--- a/src/style.css
+++ b/src/style.css
@@ -91,6 +91,11 @@ img.food-img {
 .headline > p {
     text-align: center;
     font-size: 20px;
+    margin: 10px;
+}
+
+.headline {
+    margin-bottom: 20px;
 }
 
 .panel-three {
@@ -113,4 +118,28 @@ a {
 
 .contact > * {
     margin: 10px;
+}
+
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    font-size: 20px;
+}
+
+nav {
+    padding-top: 20px;
+    height: 20%;
+    width: min(50%, 800px);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.contact {
+    font-size: 18px;
 }
